--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
         </div>
            <div class="mssg-div">
-                        <ul id="todo-item">
+                        <ul id="single-mssg">
                     
                         </ul>
                     </div>
@@ -26,7 +26,7 @@
             <input id="messageInput" placeholder="enter your message here......">
           </div>
           <div class="btns">
-            <button id="button">Delete</button>
+            <button id="button">Send</button>
           </div> 
         </div>
         </div>
